# MVE-Engine

./: .gitignore  CMakeLists.txt  build.bat  compile_shaders.bat  conanfile.txt
headers/: first_app.hpp  lve_pipeline.hpp  lve_window.hpp  mve_device.hpp  mve_pipeline.hpp  mve_swap_chain.hpp  mve_window.hpp
shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
src/: first_app.cpp  lve_pipeline.cpp  lve_window.cpp  main.cpp  mve_device.cpp  mve_pipeline.cpp  mve_swap_chain.cpp  mve_window.cpp
